Fixed an image alignment issue.

--- a/src/styles/partials/about.scss
+++ b/src/styles/partials/about.scss
@@ -79,8 +79,9 @@
 			@media only screen and (min-width: 768px) and (max-width: 1200px){
 				padding: 1rem;
 				.resimage{
-					max-width: 50%;
-					max-height: 50%;
+					max-width: 75%;
+				    max-height: 75%;
+				    text-align: center;
 					border-radius: 0.875rem;
 				}
 			}
@@ -91,6 +92,7 @@
 					max-width: 75%;
 					max-height: 75%;
 					border-radius: 0.875rem;
+					text-align: center;
 				}
 			}
 		}
